# copeca

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  index.html  pyproject.toml
.brand/: DESIGN.md  colors.md  components.md  identity.md  tokens.css  tokens.json  typography.md  voice.md
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_task.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  scorecard.yml
defaults/modes/: baseline.yaml  gateway.yaml  headroom.yaml  indexed.yaml  rtk.yaml
docs/: architecture.md  copeca-build-workflow.md  engineering.md  known-limitations.md  methodology.md  metrics.md  runner-configuration.md  task-authoring.md  task-taxonomy.md  tend-feedback.md
docs/ideas/: agent-bench-plan.md  copeca-execution-plan.md
docs/plans/: cross-cli-isolation.md
docs/research/: tilth-migration-delta.md
docs/tend/: overview.html
scenarios/: check-tilth.yaml  example.yaml  full-haiku.yaml
schemas/: task.schema.json
scripts/: contamination_blocklist.txt  contamination_check.py  import_swebench.py  migrate_from_tilth.py  smoke_test.sh  taxonomy_audit.py
src/copeca/: __init__.py  __main__.py  agnosticism.py  cli.py  contamination.py
tasks/express/: t004_express_routing.yaml
tasks/fastapi/: t006_fastapi_fix_status.yaml  t010_fastapi_fix_validation.yaml
tasks/gin/: crosscode_discovery.yaml  t003_gin_middleware.yaml  (+1 more)
tests/: test_agnosticism.py  test_orchestrator.py
(+259 files in other folders)
