[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copeca"
version = "0.1.0"
description = "Cost per correct answer — a neutral, reproducible, verifiable benchmark for CLI-based coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jan Hallvard Larsen", email = "jan@plotplot.ai" }]
keywords = ["benchmark", "ai-coding", "agent", "mcp", "cost-efficiency", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
]

[project.scripts]
copeca = "copeca.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
copeca = ["data/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "e2e: end-to-end hermetic pipeline tests (no network, no API, no real LLM)",
]
